--- a/Tex/conclusions.tex
+++ b/Tex/conclusions.tex
@@ -28,7 +28,7 @@ This note has discussed the multiple coloumb scattering technique for estimating
 
 
 \section{Possible Plots for Publication}\label{publicplots_section}
-Here are a few plots that I think should be considered for the publication. Bear in mind, in my opinion the publication should have its scope kept small so as to get it published in a very quick time scale. These plots of course can be modified, their captions changed, etc... I am just putting them here to paint a picture for the readers of this technote what I think should be included in the publication.
+Here are a few plots that I think should be considered for the publication. The publication should have its scope kept small so as to get it published in a very quick time scale. These plots of course can be modified, their captions changed, etc... I am just putting them here to paint a picture for the readers of this technote what I think should be included in the publication.
 \begin{enumerate}
 	\item Figure \ref{pub_plot_1} is a general image whose purpose is to aid the reader in understanding what MCS is and how the code works. I'm not sure this one is public-domain, but I can easily make my own version of it if necessary.
 	\item Figure \ref{pub_plot_2} is an image whose purpose is to validate using range-based momentum in place of true-momentum when the analysis is done on real data where true-momentum obviously is unknown.
