--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@
 \begin{document}
 \maketitle
 
-\abstract{Liquid Argon Time Projection Chambers (LArTPCs) are an important detector technology for the future of the neutrino physics community. This technology allows for, among other things, precise three-dimensional reconstruction of charged particle tracks that traverse the detector medium. The MicroBooNE experiment is a LArTPC at the Fermi National Accelerator laboratory with active volume dimensions of 2.3 m width $\times$ 2.6 m height $\times$ 10.4 m length located in the Booster Neutrino Beamline (BNB) which has a peak neutrino momentum of about 0.7 GeV. In this note, we discuss a technique of measuring a track-like particle's momentum by means of multiple coloumb scattering (MCS), which does not require the full track to be contained inside of the detector volume as other track momentum reconstruction methods do (E.G. range-based momentum reconstruction and calorimetric momentum reconstruction). In this note we provide motivation for why this technique is important, demonstrate and quantify its performance on simulated single tracks, and then demonstrate its performance on fully contained neutrino-induced muon tracks both in simulation and in data. In general we find good agreement between data and simulation, with negligible bias in the momentum reconstruction and with resolutions that vary as a function of track length, between 5\% for the longest tracks (several meters long) and 15\% for the shortest (one meter long) when 10 centimeter segments are used in the MCS algorithm. This technote also describes other uses for multiple coloumb scattering besides momentum reconstruction, including identification of poorly reconstructed tracks, determination of track direction, and some particle identification capabilities.}
+\abstract{Liquid Argon Time Projection Chambers (LArTPCs) are an important detector technology for the future of the neutrino physics community. This technology provides precise three-dimensional reconstruction of charged particle tracks that traverse the detector medium. The MicroBooNE experiment is a LArTPC at the Fermi National Accelerator laboratory with active volume dimensions of 2.6 m width $\times$ 2.3 m height $\times$ 10.4 m length located in the Booster Neutrino Beamline (BNB) which has a peak neutrino energy of about 0.7 GeV. In this note, we discuss a technique of measuring a track-like particle's momentum by means of multiple coloumb scattering (MCS), which does not require the full track to be contained inside of the detector volume as other track momentum reconstruction methods do (range-based momentum reconstruction and calorimetric momentum reconstruction). In this note we provide motivation for why this technique is important, demonstrate and quantify its performance on simulated single tracks, and then demonstrate its performance on fully contained neutrino-induced muon tracks both in simulation and in data. In general we find good agreement between data and simulation, with small bias in the momentum reconstruction and with resolutions that vary as a function of track length, between 5\% for the longest tracks (several meters long) and 12\% for the shortest (one meter long) when scattering deviations over 10 centimeter segments are used in the MCS algorithm. This technote also describes other uses for multiple coloumb scattering besides momentum reconstruction, including identification of poorly reconstructed tracks, determination of track direction, and particle identification.}
 
 \clearpage
 \tableofcontents
