--- a/mystyle.sty
+++ b/mystyle.sty
@@ -5,6 +5,9 @@
 \usepackage[latin1]{inputenc}
 \usepackage{babel}
 
+\usepackage{lineno}
+\linenumbers
+
 \usepackage{verbatim}
 \usepackage{url}
 \usepackage{fancyhdr} % Required for custom headers
@@ -35,7 +38,7 @@
 % Appendix
 \usepackage[titletoc]{appendix}
 
-\newcommand{\myversion}{1.2}
+\newcommand{\myversion}{1.2.1}
 % \newcommand{\myAuthorName}{David Kaleko}
 % Set up the header and footer
 \pagestyle{fancy}
@@ -49,4 +52,5 @@
 \renewcommand\footrulewidth{0.4pt} % Size of the footer rule
 
 \newcommand{\myTitle}{Multiple Coloumb Scattering in MicroBooNE}
+
 
